Refactor & Add TDD Use Cases
